--- a/package.json
+++ b/package.json
@@ -9,17 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "embla-carousel-autoplay": "^8.1.8",
-    "embla-carousel-react": "^8.1.8",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-multi-carousel": "^2.8.5",
     "react-slick": "^0.30.2",
-    "react-swiper": "^0.1.5",
-    "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.9"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -30,7 +25,7 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
